hopefully fixed pixel scaling on mobile

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -44,9 +44,11 @@ body
 
 .pixel-perfect
 {
-	image-rendering: pixelated;
-	image-rendering: -moz-crisp-edges;
-	image-rendering: crisp-edges;
+	-ms-interpolation-mode: nearest-neighbor;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-pixelated;
+    image-rendering: pixelated;
 }
 
 nav
